# organizer

./: .gitignore  Makefile  README.md  organizer.spec  pyproject.toml
src/organizer/: __init__.py  actions.py  cli.py  planner.py  scanner.py  topic.py
tests/: conftest.py  test_organizer.py
